fix: intro link is not aligned

--- a/web/app/assets/stylesheets/views/intro.scss
+++ b/web/app/assets/stylesheets/views/intro.scss
@@ -1,10 +1,8 @@
 .intro {
-  &__wrapper {
-    height: 100%;
-  }
-
   &__link {
+    position: absolute;
     height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
